--- a/index.html
+++ b/index.html
@@ -8,73 +8,16 @@
 </head>
 <body>
   <div class="navbar">
+    <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
     <a href="#" class="logo">Eaglercrack</a>
+    <div class="divider"></div>
     <div class="nav-buttons">
         <a href="#home">Home</a>
-        <a href="#clients">Clients</a>
+        <a href="/clients.html">Clients</a>
+        <a href="#servers">Servers</a>
     </div>
 </div>
-<main class="cards">
-  <h1 class="cards__heading">Clients</h1>
-  <div class="cards cards">
-    <div class="cards__inner">
-      <div class="cards__card card">
-        <h2 class="card__heading">1.5</h2>
-        <ul role="list" class="card__bullets flow">
-          <li>Updated: 11/20/23</li>
-        </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
-        </select>
-      </div>
 
-      <div class="cards__card card">
-        <h2 class="card__heading">1.8</h2>
-        <ul role="list" class="card__bullets flow">
-          <li>Updated: 11/20/23</li>
-        </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
-
-        </select>
-
-      </div>
-
-      <div class="cards__card card">
-        <h2 class="card__heading">1.3</h2>
-        <ul role="list" class="card__bullets flow">
-          <li>Updated: 11/20/23</li>
-        </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
-
-        </select>
-      </div>
-    </div>
     
     <div class="overlay cards__inner"></div>
   </div>
