--- a/clients.html
+++ b/clients.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>eaglercrack</title>
+    <div class="navbar">
+      <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
+      <a href="/index.html" class="logo">Eaglercrack</a>
+      <div class="nav-buttons">
+        <a href="/index.html">Home</a>
+        <a href="/clients.html">Clients</a>
+        <a href="/servers.html">Servers</a>
+      </div>
+  </div>
 </head>
+
 <body>
-  <div class="navbar">
-    <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
-    <a href="#" class="logo">Eaglercrack</a>
-    <div class="nav-buttons">
-        <a href="#home">Home</a>
-        <a href="#clients">Clients</a>
-        <a href="#servers">Servers</a>
-    </div>
-</div>
 <main class="cards">
   <h1 class="cards__heading">Clients</h1>
   <div class="cards cards">
