--- a/index.html
+++ b/index.html
@@ -5,22 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>eaglercrack</title>
-</head>
-<body>
-  <div class="navbar">
-    <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
-    <a href="#" class="logo">Eaglercrack</a>
-    <div class="divider"></div>
-    <div class="nav-buttons">
-        <a href="#home">Home</a>
-        <a href="/clients.html">Clients</a>
-        <a href="#servers">Servers</a>
-    </div>
-</div>
-
-    
-    <div class="overlay cards__inner"></div>
+    <div class="navbar">
+      <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
+      <a href="/index.html" class="logo">Eaglercrack</a>
+      <div class="nav-buttons">
+          <a href="/index.html">Home</a>
+          <a href="/clients.html">Clients</a>
+          <a href="/servers.html">Servers</a>
+      </div>
   </div>
-</main>
+</head>
+
+<body>
+  <main class="cards">
+    <h1 class="cards__heading">Info</h1>
+    <div class="cards cards">
+      <div class="cards__inner">
+        <div class="cards__card card">
+          <h2 class="card__heading">Announcements</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Site Recoded</li>
+          </ul>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Updates</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>No Updates</li>
+          </ul>        
+        </div> 
+        <div class="cards__card card">
+          <h2 class="card__heading">Change log</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Changed Navbar</li>
+            <li>Changed </li>
+          </ul>
+        </div>
+      </div>
+      
+      <div class="overlay cards__inner"></div>
+    </div>
+  </main>
+  
 </body>
 </html>
