--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>eaglercrack</title>
+    <title>Eaglercrack</title>
     <div class="navbar">
       <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
       <a href="/index.html" class="logo">Eaglercrack</a>
