--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Eaglercrack</title>
+    
     <div class="navbar">
       <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
       <a href="/index.html" class="logo">Eaglercrack</a>
+      <div class="divider"></div>
       <div class="nav-buttons">
           <a href="/index.html">Home</a>
           <a href="/clients.html">Clients</a>
