--- a/clients.html
+++ b/clients.html
@@ -8,6 +8,7 @@
     <div class="navbar">
       <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
       <a href="/index.html" class="logo">Eaglercrack</a>
+      <div class="divider"></div>
       <div class="nav-buttons">
         <a href="/index.html">Home</a>
         <a href="/clients.html">Clients</a>
