--- a/clients.html
+++ b/clients.html
@@ -19,7 +19,7 @@
 
 <body>
 <main class="cards">
-  <h1 class="cards__heading">Clients</h1>
+  <h1 class="cards__heading">1.8 Clients</h1>
   <div class="cards cards">
     <div class="cards__inner">
       <div class="cards__card card">
@@ -27,17 +27,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
-        </select>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
       </div>
 
       <div class="cards__card card">
@@ -45,41 +36,47 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
-
-        </select>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
 
       </div>
-
       <div class="cards__card card">
-        <h2 class="card__heading">1.3</h2>
+        <h2 class="card__heading">1.8</h2>
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <select  class="card__cta cta">
-          <option value="hide">Play</option>
-          <option value="january">--Legit--</option>
-          <option value="february">Classic</option>
-          <option value="march">Resent</option>
-          <option value="april">Shadow</option>
-          <option value="may">--Hacked--</option>
-          <option value="june">DragonX</option>
-          <option value="july">UwU Client</option>
-          <option value="august">Pi Client</option>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
 
-        </select>
       </div>
-    </div>
-    
+      <div class="cards__card card">
+        <h2 class="card__heading">1.8</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+      <div class="cards__card card">
+        <h2 class="card__heading">1.8</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+      <div class="cards__card card">
+        <h2 class="card__heading">1.8</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+
     <div class="overlay cards__inner"></div>
   </div>
 </main>
