--- a/1.5.html
+++ b/1.5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>eaglercrack</title>
+    <title>Eaglercrack</title>
     <div class="navbar">
       <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
       <a href="/index.html" class="logo">Eaglercrack</a>
@@ -19,34 +19,56 @@
 
 <body>
 <main class="cards">
-  <h1 class="cards__heading">Clients</h1>
+  <h1 class="cards__heading">1.5 Clients</h1>
   <div class="cards cards">
     <div class="cards__inner">
       <div class="cards__card card">
-        <h2 class="card__heading">1.5</h2>
+        <h2 class="card__heading">CoderCraft</h2>
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="/1.5.html" class="card__cta cta">Select</a>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
       </div>
 
       <div class="cards__card card">
-        <h2 class="card__heading">1.8</h2>
+        <h2 class="card__heading">Kerosene Client</h2>
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="/1.8.html" class="card__cta cta">Select</a>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+      <div class="cards__card card">
+        <h2 class="card__heading">Nebula Client</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+      <div class="cards__card card">
+        <h2 class="card__heading">Nit Client</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
+      </div>
+      <div class="cards__card card">
+        <h2 class="card__heading">Classic</h2>
+        <ul role="list" class="card__bullets flow">
+          <li>Updated: 11/20/23</li>
+        </ul>
+        <a href="" class="card__cta cta">Play</a>
+        <a href="" class="card__cta cta">Download</a>
+
       </div>
 
-      <div class="cards__card card">
-        <h2 class="card__heading">1.3</h2>
-        <ul role="list" class="card__bullets flow">
-          <li>Updated: 11/20/23</li>
-        </ul>
-        <a href="/1.3.html" class="card__cta cta">Select</a>
-      </div>
-    </div>
-    
+
     <div class="overlay cards__inner"></div>
   </div>
 </main>
