--- a/1.3.html
+++ b/1.3.html
@@ -27,8 +27,8 @@
             <ul role="list" class="card__bullets flow">
               <li>Updated: 11/20/23</li>
             </ul>
-            <a href="" class="card__cta cta">Play</a>
-            <a href="" class="card__cta cta">Download</a>
+            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta">Play</a>
+            <a href="/clients/1.3/eagler1.3.html" class="card__cta cta" download>Download</a>
     
           </div>
 
