--- a/1.5.html
+++ b/1.5.html
@@ -27,8 +27,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="" class="card__cta cta">Play</a>
-        <a href="" class="card__cta cta">Download</a>
+        <a href="/clients/1.5/codercraft.html" class="card__cta cta">Play</a>
+        <a href="/clients/1.5/codercraft.html" class="card__cta cta" download>Download</a>
       </div>
 
       <div class="cards__card card">
@@ -36,8 +36,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="" class="card__cta cta">Play</a>
-        <a href="" class="card__cta cta">Download</a>
+        <a href="/clients/1.5/kerosene.html" class="card__cta cta">Play</a>
+        <a href="/clients/1.5/kerosene.html" class="card__cta cta" download>Download</a>
 
       </div>
       <div class="cards__card card">
@@ -45,8 +45,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="" class="card__cta cta">Play</a>
-        <a href="" class="card__cta cta">Download</a>
+        <a href="/clients/1.5/nebula.html" class="card__cta cta">Play</a>
+        <a href="/clients/1.5/nebula.html" class="card__cta cta" download>Download</a>
 
       </div>
       <div class="cards__card card">
@@ -54,8 +54,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="" class="card__cta cta">Play</a>
-        <a href="" class="card__cta cta">Download</a>
+        <a href="/clients/1.5/nitclient.html" class="card__cta cta">Play</a>
+        <a href="/clients/1.5/nitclient.html" class="card__cta cta" download>Download</a>
 
       </div>
       <div class="cards__card card">
@@ -63,8 +63,8 @@
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/20/23</li>
         </ul>
-        <a href="" class="card__cta cta">Play</a>
-        <a href="" class="card__cta cta">Download</a>
+        <a href="/clients/1.5/eagler1.5.html" class="card__cta cta">Play</a>
+        <a href="/clients/1.5/eagler1.5.html" class="card__cta cta" download>Download</a>
 
       </div>
 
