--- a/1.5.html
+++ b/1.5.html
@@ -13,6 +13,7 @@
         <a href="/index.html">Home</a>
         <a href="/clients.html">Clients</a>
         <a href="/servers.html">Servers</a>
+        <a href="/more.html">More...</a>
       </div>
   </div>
 </head>
@@ -30,6 +31,15 @@
         <a href="/clients/1.5/codercraft.html" class="card__cta cta">Play</a>
         <a href="/clients/1.5/codercraft.html" class="card__cta cta" download>Download</a>
       </div>
+
+    </div>
+    <div class="cards__card card">
+      <h2 class="card__heading">FuchsiaX Ghost</h2>
+      <ul role="list" class="card__bullets flow">
+        <li>Updated: 11/21/23</li>
+      </ul>
+      <a href="/clients/1.5/FuchsiaX_Ghost.html" class="card__cta cta">Play</a>
+      <a href="/clients/1.5/FuchsiaX_Ghost.html" class="card__cta cta" download>Download</a>
 
       <div class="cards__card card">
         <h2 class="card__heading">Kerosene Client</h2>
@@ -50,7 +60,7 @@
 
       </div>
       <div class="cards__card card">
-        <h2 class="card__heading">Nit Client</h2>
+        <h2 class="card__heading">NitClient</h2>
         <ul role="list" class="card__bullets flow">
           <li>Updated: 11/21/23</li>
         </ul>
