--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
           <a href="/index.html">Home</a>
           <a href="/clients.html">Clients</a>
           <a href="/servers.html">Servers</a>
+          <a href="/more.html">More...</a>
       </div>
   </div>
 </head>
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">Info</h1>
+    <h1 class="cards__heading">Home</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <div class="cards__card card">
