--- a/1.8.html
+++ b/1.8.html
@@ -13,6 +13,7 @@
         <a href="/index.html">Home</a>
         <a href="/clients.html">Clients</a>
         <a href="/servers.html">Servers</a>
+        <a href="/more.html">More...</a>
       </div>
   </div>
 </head>
