--- a/clients.html
+++ b/clients.html
@@ -5,16 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>eaglercrack</title>
-    <div class="navbar">
-      <a href="index.html"><img src="eaglercraft.jpg" class="imgTest">
-      <a href="/index.html" class="logo">Eaglercrack</a>
-      <div class="divider"></div>
-      <div class="nav-buttons">
-        <a href="/index.html">Home</a>
-        <a href="/clients.html">Clients</a>
-        <a href="/servers.html">Servers</a>
+    <nav class="nav">
+      <div class="logo">
+          <img src="/eaglercraft.jpg" alt="Logo">
+          <h1>Eaglercrack</h1>
       </div>
-  </div>
+      <div class="spacer"></div>
+      <ul class="navElements">
+          <li class="active">
+              <a href="/index.html">Home</a>
+          </li>
+          <li>
+              <a href="/clients.html">Clients</a>
+          </li>
+          <li>
+              <a href="/servers.html">Servers</a>
+          </li>
+      </ul>
+      <div style="margin: 0 30px 0 0;">
+          <a class="button" href="https://discord.gg/3kMTjSHj64">
+              Join the Discord
+          </a>
+      </div>
+  </nav>
 </head>
 
 <body>
