--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
-          <a class="button" href="https://discord.gg/3kMTjSHj64">
+          <a class="button" href="">
               Join the Discord
           </a>
       </div>
