servers and more (not done)
aam eepy

--- a/blogs.html
+++ b/blogs.html
@@ -32,25 +32,26 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">More...</h1>
+    <h1 class="cards__heading">Blogs</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the blogs -->
         <div class="cards__card card">
-          <h2 class="card__heading">Blogs</h2>
+          <h2 class="card__heading">Credits</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Check out all of the Eaglercrack blogs!</li>
+            <li>Eaglercrack about and credits </li>
+            <br>
           </ul>
-          <a href="blogs.html" class="card__cta cta">Visit...</a>
+          <a href="/blogs/about.html" class="card__cta cta">Read More...</a>
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Eaglercrack Archive</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
-          </ul>
-          <a href="" class="card__cta cta">Visit...</a>
-        </div>
+            <h2 class="card__heading">Social Media</h2>
+            <ul role="list" class="card__bullets flow">
+              <li>Join the discord, follow on tiktok, youtube, and more!</li>
+            </ul>
+            <a href="/blogs/social.html" class="card__cta cta">Read More...</a>
+          </div>
 
       <div class="overlay cards__inner"></div>
     </div>
