--- a/1.3.html
+++ b/1.3.html
@@ -21,6 +21,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/3kMTjSHj64">
