--- a/servers.html
+++ b/servers.html
@@ -21,6 +21,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/3kMTjSHj64">
@@ -40,6 +43,7 @@
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
               <li>wss://zentic.cc</li>
+              <br>
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
@@ -49,6 +53,7 @@
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
               <li>wss://mc.arch.lol</li>
+              <br>
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
@@ -67,6 +72,7 @@
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
               <li>wss://legxndsmp.minecraft.pe</li>
+              <br>
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
@@ -76,6 +82,7 @@
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
               <li>wss://ggsmp.net/</li>
+              <br>
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
@@ -85,6 +92,7 @@
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
               <li>wss://asianf4rmer.minecraft.pe</li>
+              <br>
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
