--- a/1.5.html
+++ b/1.5.html
@@ -21,6 +21,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/3kMTjSHj64">
@@ -51,8 +54,8 @@
           </ul>
           <a href="/clients/1.5/kerosene.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/kerosene.html" class="card__cta cta" download>Download</a>
-  
         </div>
+        
         <div class="cards__card card">
           <h2 class="card__heading">Nebula Client</h2>
           <ul role="list" class="card__bullets flow">
@@ -60,8 +63,8 @@
           </ul>
           <a href="/clients/1.5/nebula.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/nebula.html" class="card__cta cta" download>Download</a>
-  
         </div>
+
         <div class="cards__card card">
           <h2 class="card__heading">Nit Client</h2>
           <ul role="list" class="card__bullets flow">
@@ -69,8 +72,17 @@
           </ul>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta" download>Download</a>
-  
         </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Pi Client</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Updated: 11/22/23</li>
+          </ul>
+          <a href="/clients/1.5/piclient.html" class="card__cta cta">Play</a>
+          <a href="/clients/1.5/piclient.html" class="card__cta cta" download>Download</a>
+        </div>
+
         <div class="cards__card card">
           <h2 class="card__heading">Classic</h2>
           <ul role="list" class="card__bullets flow">
@@ -78,7 +90,6 @@
           </ul>
           <a href="/clients/1.5/eagler1.5.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/eagler1.5.html" class="card__cta cta" download>Download</a>
-  
         </div>
   
   
