--- a/blogs.html
+++ b/blogs.html
@@ -21,6 +21,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/3kMTjSHj64">
@@ -48,7 +51,7 @@
         <div class="cards__card card">
             <h2 class="card__heading">Social Media</h2>
             <ul role="list" class="card__bullets flow">
-              <li>Join the discord, follow on tiktok, youtube, and more!</li>
+              <li>Join the discord, follow on youtube, github, and more!</li>
             </ul>
             <a href="/blogs/social.html" class="card__cta cta">Read More...</a>
           </div>
