--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="">
@@ -52,6 +55,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Change log</h2>
           <ul role="list" class="card__bullets flow">
+            <li>Added More... to Navbar</li>
             <li>Changed Navbar</li>
             <li>Changed </li>
           </ul>
