--- a/more.html
+++ b/more.html
@@ -21,6 +21,9 @@
           <li>
               <a href="/servers.html">Servers</a>
           </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/3kMTjSHj64">
@@ -40,6 +43,7 @@
           <h2 class="card__heading">Blogs</h2>
           <ul role="list" class="card__bullets flow">
             <li>Check out all of the Eaglercrack blogs!</li>
+            <br>  
           </ul>
           <a href="blogs.html" class="card__cta cta">Visit...</a>
         </div>
