--- a/more.html
+++ b/more.html
@@ -39,13 +39,14 @@
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the blogs -->
-        <div class="cards__card card">
-          <h2 class="card__heading">Blogs</h2>
+                <div class="cards__card card">
+          <h2 class="card__heading">Discord</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Check out all of the Eaglercrack blogs!</li>
+            <li>Join the official Eaglercrack discord!</li>
             <br>  
           </ul>
-          <a href="blogs.html" class="card__cta cta">Visit...</a>
+          <a href="https://discord.gg/3kMTjSHj64" class="card__cta cta">Join...</a>
+          <a href="widget.html" class="card__cta cta">Widget Bot...</a>
         </div>
 
         <div class="cards__card card">
@@ -54,6 +55,15 @@
             <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
           </ul>
           <a href="" class="card__cta cta">Visit...</a>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Credits</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>The developers and credits.</li>
+            <br>
+          </ul>
+          <a href="/more/credits.html" class="card__cta cta">View...</a>
         </div>
 
       <div class="overlay cards__inner"></div>
