--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
             <br>  
           </ul>
           <a href="https://discord.gg/3kMTjSHj64" class="card__cta cta">Join...</a>
-          <a href="widget.html" class="card__cta cta">Widget Bot...</a>
+          <a href="/more/widget.html" class="card__cta cta">Widget Bot...</a>
         </div>
 
         <div class="cards__card card">
@@ -54,7 +54,25 @@
           <ul role="list" class="card__bullets flow">
             <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
           </ul>
-          <a href="" class="card__cta cta">Visit...</a>
+          <a href="" class="card__cta cta">Soon...</a>
+        </div>
+
+                <div class="cards__card card">
+          <h2 class="card__heading">Partners</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Visit our partners!</li>
+            <br>
+          </ul>
+          <a href="/more/partners.html" class="card__cta cta">Visit...</a>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Google forms</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
+            <br>
+          </ul>
+          <a href="/more/partners.html" class="card__cta cta">Visit...</a>
         </div>
 
         <div class="cards__card card">
