--- a/more.html
+++ b/more.html
@@ -72,7 +72,7 @@
             <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
             <br>
           </ul>
-          <a href="/more/partners.html" class="card__cta cta">Visit...</a>
+          <a href="/more/forms.html" class="card__cta cta">Visit...</a>
         </div>
 
         <div class="cards__card card">
