--- a/servers.html
+++ b/servers.html
@@ -89,6 +89,16 @@
           </div>
 
           <div class="cards__card card">
+            <h2 class="card__heading">Verise Anarchy</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://verise.repl.co/</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
             <h2 class="card__heading">Asianf4rmer smp</h2>
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
