--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
             <li>Join the official Eaglercrack discord!</li>
             <br>  
           </ul>
-          <a href="https://discord.gg/3kMTjSHj64" class="card__cta cta">Join...</a>
+          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Join...</a>
           <a href="/more/widget.html" class="card__cta cta">Widget Bot...</a>
         </div>
 
