--- a/1.3.html
+++ b/1.3.html
@@ -26,7 +26,7 @@
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
-          <a class="button" href="https://discord.gg/3kMTjSHj64">
+          <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
           </a>
       </div>
