--- a/more/widget.html
+++ b/more/widget.html
@@ -27,7 +27,7 @@
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
-          <a class="button" href="">
+          <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
           </a>
       </div>
