PiClient and Versions

--- a/1.8.html
+++ b/1.8.html
@@ -41,7 +41,7 @@
         <div class="cards__card card">
             <h2 class="card__heading">UwU Client</h2>
             <ul role="list" class="card__bullets flow">
-              <li>Updated: 11/21/23</li>
+              <li>Version: UwU Client B2</li>
             </ul>
             <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta">Play</a>
             <a href="/clients/1.8/UwUclientB2.html" class="card__cta cta" download>Download</a>
@@ -50,16 +50,26 @@
           <div class="cards__card card">
             <h2 class="card__heading">DragonX</h2>
             <ul role="list" class="card__bullets flow">
-              <li>Updated: 11/21/23</li>
+              <li>Version: DragonX V3</li>
             </ul>
             <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta">Play</a>
             <a href="/clients/1.8/DragonX_V3.html" class="card__cta cta" download>Download</a>
-    
           </div>
+
+        </div>
+        <div class="cards__card card">
+          <h2 class="card__heading">PiClient</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Version: PiClient V1 (23/01/2023) </li>
+          </ul>
+          <a href="/clients/1.8/PiClient.html" class="card__cta cta">Play</a>
+          <a href="/clients/1.8/PiClient.html" class="card__cta cta" download>Download</a>
+        </div>
+
           <div class="cards__card card">
             <h2 class="card__heading">Resent</h2>
             <ul role="list" class="card__bullets flow">
-              <li>Updated: 11/21/23</li>
+              <li>Version: 3.8</li>
             </ul>
             <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta">Play</a>
             <a href="/clients/1.8/Resent_3.8.html" class="card__cta cta" download>Download</a>
@@ -68,7 +78,7 @@
           <div class="cards__card card">
             <h2 class="card__heading">Shadow Client</h2>
             <ul role="list" class="card__bullets flow">
-              <li>Updated: 11/21/23</li>
+              <li>Version: idk</li>
             </ul>
             <a href="/clients/1.8/ShadowClient.html" class="card__cta cta">Play</a>
             <a href="/clients/1.8/ShadowClient.html" class="card__cta cta" download>Download</a>
