FuchsiaX and more Versions

--- a/1.5.html
+++ b/1.5.html
@@ -38,6 +38,16 @@
     <h1 class="cards__heading">1.5 Clients</h1>
     <div class="cards cards">
       <div class="cards__inner">
+<!-- Start -->
+        <div class="cards__card card">
+          <h2 class="card__heading">FuchsiaX</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Version: C.M.M's-Fuchsia-X-Client</li>
+          </ul>
+          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta">Play</a>
+          <a href="/clients/1.5/fuchsiax.html" class="card__cta cta" download>Download</a>
+        </div>
+
         <div class="cards__card card">
           <h2 class="card__heading">CoderCraft</h2>
           <ul role="list" class="card__bullets flow">
@@ -66,16 +76,16 @@
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Nit Client</h2>
+          <h2 class="card__heading">NitClient</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Updated: 11/21/23</li>
+            <li>Version: NitClient 2.0</li>
           </ul>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta" download>Download</a>
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Pi Client</h2>
+          <h2 class="card__heading">PiClient</h2>
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/22/23</li>
           </ul>
@@ -91,8 +101,7 @@
           <a href="/clients/1.5/eagler1.5.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/eagler1.5.html" class="card__cta cta" download>Download</a>
         </div>
-  
-  
+<!-- End -->
       <div class="overlay cards__inner"></div>
     </div>
   </main>
