--- a/more.html
+++ b/more.html
@@ -44,6 +44,7 @@
           <ul role="list" class="card__bullets flow">
             <li>Join the official Eaglercrack discord!</li>
             <br>  
+            <br>
           </ul>
           <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Join...</a>
           <a href="/more/widget.html" class="card__cta cta">Widget Bot...</a>
@@ -54,13 +55,15 @@
           <ul role="list" class="card__bullets flow">
             <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
           </ul>
-          <a href="" class="card__cta cta">Soon...</a>
+          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Soon...</a>
         </div>
 
                 <div class="cards__card card">
           <h2 class="card__heading">Partners</h2>
           <ul role="list" class="card__bullets flow">
             <li>Visit our partners!</li>
+            <br>
+            <br>
             <br>
           </ul>
           <a href="/more/partners.html" class="card__cta cta">Visit...</a>
@@ -79,6 +82,7 @@
           <h2 class="card__heading">Credits</h2>
           <ul role="list" class="card__bullets flow">
             <li>The developers and credits.</li>
+            <br>
             <br>
           </ul>
           <a href="/more/credits.html" class="card__cta cta">View...</a>
