--- a/more/credits.html
+++ b/more/credits.html
@@ -40,24 +40,26 @@
     <div class="cards cards">
       <div class="cards__inner">
         <div class="cards__card card">
-          <h2 class="card__heading">Announcements</h2>
+          <h2 class="card__heading">Site developers</h2>
           <ul role="list" class="card__bullets flow"> 
-            <li>Site Recoded</li>
+            <li>Rimm</li>
+            <li>Proofr</li>
           </ul>
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Updates</h2>
+          <h2 class="card__heading">Staff</h2>
           <ul role="list" class="card__bullets flow">
-            <li>No Updates</li>
+            <li>Rimm</li>
+            <li>Proofr</li>
+            <li>Tussle</li>
           </ul>        
         </div> 
+        
         <div class="cards__card card">
-          <h2 class="card__heading">Change log</h2>
+          <h2 class="card__heading">Partners</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Added More... to Navbar</li>
-            <li>Changed Navbar</li>
-            <li>Changed </li>
+            <li>None...</li>
           </ul>
         </div>
       </div>
