--- a/more.html
+++ b/more.html
@@ -88,6 +88,16 @@
           <a href="/more/credits.html" class="card__cta cta">View...</a>
         </div>
 
+        <div class="cards__card card">
+          <h2 class="card__heading">Links</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Website and Discord links.</li>
+            <br>
+            <br>
+          </ul>
+          <a href="/more/links.html" class="card__cta cta">View...</a>
+        </div>
+
       <div class="overlay cards__inner"></div>
     </div>
   </main>
