bad im just saving

--- a/more/credits.html
+++ b/more/credits.html
@@ -35,18 +35,21 @@
 </head>
 
 <body>
-  <main class="cards">
-    <h1 class="cards__heading">Home</h1>
-    <div class="cards cards">
-      <div class="cards__inner">
-        <div class="cards__card card">
-          <h2 class="card__heading">Site developers</h2>
-          <ul role="list" class="card__bullets flow"> 
-            <li>Rimm</li>
-            <li>Proofr</li>
-          </ul>
-        </div>
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1 class="cards__heading">Credits</h1>
+  <h1 class="text2"> Staff </h1>
+  <br>
+  <hr class="hr2">
+  <h2 class="text3">Rimm</h2>
+  <h2 class="text3">Proofr</h2>
         <div class="cards__card card">
           <h2 class="card__heading">Staff</h2>
           <ul role="list" class="card__bullets flow">
