--- a/more/credits.html
+++ b/more/credits.html
@@ -35,27 +35,23 @@
 </head>
 
 <body>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <h1 class="cards__heading">Credits</h1>
-  <h1 class="text2"> Staff </h1>
-  <br>
-  <hr class="hr2">
-  <h2 class="text3">Rimm</h2>
-  <h2 class="text3">Proofr</h2>
+  <main class="cards">
+    <h1 class="cards__heading">Credits</h1>
+    <div class="cards cards">
+      <div class="cards__inner">
+        <div class="cards__card card">
+          <h2 class="card__heading">Website Developers</h2>
+          <ul role="list" class="card__bullets flow"> 
+            <li>Rimm</li>
+            <li>Proofr</li>
+          </ul>
+        </div>
+
         <div class="cards__card card">
           <h2 class="card__heading">Staff</h2>
           <ul role="list" class="card__bullets flow">
             <li>Rimm</li>
             <li>Proofr</li>
-            <li>Tussle</li>
           </ul>        
         </div> 
         
