--- a/more/widget.html
+++ b/more/widget.html
@@ -35,36 +35,6 @@
 </head>
 
 <body>
-  <main class="cards">
-    <h1 class="cards__heading">Home</h1>
-    <div class="cards cards">
-      <div class="cards__inner">
-        <div class="cards__card card">
-          <h2 class="card__heading">Announcements</h2>
-          <ul role="list" class="card__bullets flow"> 
-            <li>Site Recoded</li>
-          </ul>
-        </div>
-
-        <div class="cards__card card">
-          <h2 class="card__heading">Updates</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>No Updates</li>
-          </ul>        
-        </div> 
-        <div class="cards__card card">
-          <h2 class="card__heading">Change log</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Added More... to Navbar</li>
-            <li>Changed Navbar</li>
-            <li>Changed </li>
-          </ul>
-        </div>
-      </div>
-      
-      <div class="overlay cards__inner"></div>
-    </div>
-  </main>
-  
+<iframe src="https://e.widgetbot.io/channels/1175970360596902040/1178489839876833281" allow="clipboard-write; fullscreen" height="540" width="1365"></iframe>
 </body>
 </html>
