--- a/servers.html
+++ b/servers.html
@@ -38,16 +38,7 @@
   <h1 class="cards__heading">Servers</h1>   
   <div class="cards cards">
     <div class="cards__inner">
-        <div class="cards__card card">
-            <h2 class="card__heading">Zentic</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://zentic.cc</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
+      <!-- Start -->
           <div class="cards__card card">
             <h2 class="card__heading">ArchMC</h2>
             <ul role="list" class="card__bullets flow">
