--- a/more/credits.html
+++ b/more/credits.html
@@ -39,6 +39,7 @@
     <h1 class="cards__heading">Credits</h1>
     <div class="cards cards">
       <div class="cards__inner">
+        <!-- Start -->
         <div class="cards__card card">
           <h2 class="card__heading">Website Developers</h2>
           <ul role="list" class="card__bullets flow"> 
@@ -52,6 +53,27 @@
           <ul role="list" class="card__bullets flow">
             <li>Rimm</li>
             <li>Proofr</li>
+          </ul>        
+        </div> 
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Clients</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>FuchsiaX C.M.M. Version - C.M.M.</li>
+            <hr>
+            <li>Finding Clients - Proofr</li>
+            <hr>
+            <li>DragonX V3 - FatalEagler</li>
+            <hr>
+            <li>PiClient - apie357</li>
+            <hr>
+            <li>Ayuncraft - ayunboom</li>
+            <hr>
+            <li>Precision client - etcherfx</li>
+            <hr>
+            <li>Eaglercraft 1.8, 1.5, and 1.3 - lax1dude</li>
+            <hr>
+            <li></li>
           </ul>        
         </div> 
         
