--- a/1.5.html
+++ b/1.5.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Eaglercrack</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
     <nav class="nav">
       <div class="logo">
-          <img src="/eaglercraft.jpg" alt="Logo">
+          <img src="/assets/eaglercraft.jpg" alt="Logo">
           <h1>Eaglercrack</h1>
       </div>
       <div class="spacer"></div>
@@ -49,6 +51,15 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">OddFuture</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Version: </li>
+          </ul>
+          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta">Play</a>
+          <a href="/clients/1.5/OddFutureClient.html" class="card__cta cta" download>Download</a>
+        </div>
+
+        <div class="cards__card card">
           <h2 class="card__heading">CoderCraft</h2>
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
@@ -58,7 +69,7 @@
         </div>
   
         <div class="cards__card card">
-          <h2 class="card__heading">Kerosene Client</h2>
+          <h2 class="card__heading">Kerosene</h2>
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
           </ul>
@@ -67,7 +78,7 @@
         </div>
         
         <div class="cards__card card">
-          <h2 class="card__heading">Nebula Client</h2>
+          <h2 class="card__heading">Nebula</h2>
           <ul role="list" class="card__bullets flow">
             <li>Updated: 11/21/23</li>
           </ul>
@@ -82,6 +93,15 @@
           </ul>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta">Play</a>
           <a href="/clients/1.5/nitclient.html" class="card__cta cta" download>Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Precision Client</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Version: beta_0.1.8.4</li>
+          </ul>
+          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta">Play</a>
+          <a href="/clients/1.5/PrecisionClient.html" class="card__cta cta" download>Download</a>
         </div>
 
         <div class="cards__card card">
