--- a/1.3.html
+++ b/1.3.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Eaglercrack</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
     <nav class="nav">
       <div class="logo">
-          <img src="/eaglercraft.jpg" alt="Logo">
+          <img src="/assets/eaglercraft.jpg" alt="Logo">
           <h1>Eaglercrack</h1>
       </div>
       <div class="spacer"></div>
