--- a/more.html
+++ b/more.html
@@ -61,10 +61,19 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">Blogs</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Eaglercrack blogs for help.</li>
+            <br>
+            <br>
+          </ul>
+          <a href="/more/blogs.html" class="card__cta cta">View...</a>
+        </div>
+
+        <div class="cards__card card">
           <h2 class="card__heading">Google forms</h2>
           <ul role="list" class="card__bullets flow">
             <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
-            <br>
           </ul>
           <a href="/more/forms.html" class="card__cta cta">Visit...</a>
         </div>
@@ -73,7 +82,6 @@
           <h2 class="card__heading">Credits</h2>
           <ul role="list" class="card__bullets flow">
             <li>The developers and credits.</li>
-            <br>
             <br>
             <br>
           </ul>
