--- a/more/blogs.html
+++ b/more/blogs.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>Eaglercrack</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    
+
     <nav class="nav">
       <div class="logo">
           <img src="/assets/eaglercraft.jpg" alt="Logo">
@@ -37,26 +37,22 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">Forms</h1>
+    <h1 class="cards__heading">More...</h1>
     <div class="cards cards">
       <div class="cards__inner">
-        <!-- Start -->
-        <div class="cards__card card">
-          <h2 class="card__heading2">Suggestions</h2>
-          <hr>
-          <a class="card__heading3" href="https://forms.gle/vqLGHKwjWvcMRnRu5">Client</a>
-          <a class="card__heading3" href="https://forms.gle/CK3fKY3mydQ5PPYg6">Server</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading2">Others</h2>
-            <hr>
-            <a class="card__heading3" href="https://forms.gle/kNrpeoz7WkERLtqq7">Partner</a>
-            </div>
+        <!-- Start the blogs -->
+                <div class="cards__card card">
+          <h2 class="card__heading">Best Eaglercraft settings</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Best Eaglercraft FPS settings.</li>
+            <br>  
+            <br>
+          </ul>
+          <a href="/blogs/bestfps.html" class="card__cta cta">View...</a>
+        </div>
 
       <div class="overlay cards__inner"></div>
     </div>
   </main>
-  
-</body>
+  </body>
 </html>
