--- a/servers.html
+++ b/servers.html
@@ -50,6 +50,16 @@
             </ul>
             <a href="" class="card__cta cta">Copy IP</a>
           </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">Zentic</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://zentic.cc</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
           
           <div class="cards__card card">
             <h2 class="card__heading">Aeon Network</h2>
