--- a/servers.html
+++ b/servers.html
@@ -102,6 +102,16 @@
           </div>
 
           <div class="cards__card card">
+            <h2 class="card__heading">CraftClue</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://play.craftclue.rocks</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
             <h2 class="card__heading">Asianf4rmer smp</h2>
             <ul role="list" class="card__bullets flow">
               <h4>1.8 Server IP</h4>
